objects/DashBoardConfig__c.object
<CustomObject>
    <fields>
        <fullName>FilterFields__c</fullName>
        <label>FilterFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectConfig__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SObjectConfig</label>
        <referenceTo>SObjectConfig__c</referenceTo>
        <relationshipLabel>DashBoardConfigs</relationshipLabel>
        <relationshipName>DashBoardConfigs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DashBoardConfig</label>
    <nameField>
        <label>DashBoardConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashBoardConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>